objects/Project_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <inlineHelpText>Count of all activities related to this goal</inlineHelpText>
        <label>Activity Count</label>
        <summaryForeignKey>Project_Activity__c.Project_Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <inlineHelpText>Sum of all activities related to this goal</inlineHelpText>
        <label>Actual Hours</label>
        <summarizedField>Project_Activity__c.Hours__c</summarizedField>
        <summaryForeignKey>Project_Activity__c.Project_Goal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budgeted_Hours__c</fullName>
        <inlineHelpText>As planned in SOW</inlineHelpText>
        <label>Budgeted Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Alert__c</fullName>
        <formula>/* If Actual Hours exceed Budgeted Hours */
IF (Actual_Hours__c &gt; Budgeted_Hours__c, IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) + &quot; Exceeding &quot; + TEXT (Actual_Hours__c - Budgeted_Hours__c) + &quot; hrs&quot;, 
/* If Actual Hours same as Budgeted Hours */
IF (Actual_Hours__c = Budgeted_Hours__c, IMAGE (&quot;/resource/Flag_Green&quot;, &quot;Flag Green&quot;)+ &quot; Remaining 0 hr&quot;,
/* If Actual Hours are within 10% of Budgeted Hours */
IF ((Budgeted_Hours__c - Actual_Hours__c) &lt;= (Budgeted_Hours__c/10), IMAGE (&quot;/resource/Flag_Yellow&quot;, &quot;Flag Yellow&quot;) + &quot; Remaining &quot; + TEXT (Budgeted_Hours__c - Actual_Hours__c) + &quot; hrs&quot;, 
/* Else Actual Hours are more than 10% of Budgeted Hours */
IMAGE (&quot;/resource/Flag_Green&quot;, &quot;Flag Green&quot;) + &quot; Remaining &quot; + TEXT (Budgeted_Hours__c - Actual_Hours__c) + &quot; hrs&quot;
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red, if Actual &gt;= Budgeted
Yellow, if Actual &lt;= 10% of Budgeted
Green, if Actual &gt; 10% of Budgeted</inlineHelpText>
        <label>Goal Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Details__c</fullName>
        <label>Goal Details</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Goal_Plus_Alert__c</fullName>
        <formula>Goal__c + &quot; &quot; + Goal_Alert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal + Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <inlineHelpText>As planned in SOW</inlineHelpText>
        <label>Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Give a number to identify the relative importance of this goal</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <referenceTo>Project_Tracker__c</referenceTo>
        <relationshipLabel>Project Goals</relationshipLabel>
        <relationshipName>Project_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                    <default>true</default>
                    <label>Not Yet Started</label>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Goal__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Goal_Alert__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>Actual_Hours__c</columns>
        <columns>Activity_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>